--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,6 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - SECRET_KEY=${SECRET_KEY}
     # bridge - connect to docker container from localhost
     network_mode: bridge
