recreated aws components to test push

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -55,7 +55,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: aws-ecs-demo-ecr
+        ECR_REPOSITORY: aws-ecs-demo-ecr-2
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
@@ -74,13 +74,13 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: aws-task-definition.json
-        container-name: aws-ecs-demo-ecr
+        container-name: aws-ecs-demo-ecr-2
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: aws-ecs-demo-service
-        cluster: aws-ecs-demo-cluster
+        service: aws-ecs-demo-service-2
+        cluster: aws-ecs-demo-cluster-2
         wait-for-service-stability: true
