--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -64,7 +64,7 @@ jobs:
         docker build --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             --build-arg AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }} \
-            --build-arg SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }} \
+            --build-arg FLASK_SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }} \
             --build-arg POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
             --build-arg POSTGRES_PW=${{ secrets.POSTGRES_PW }} \
             --build-arg POSTGRES_URL=${{ secrets.POSTGRES_URL }} \
